--- a/springbootservicein28minlimitsservice.properties
+++ b/springbootservicein28minlimitsservice.properties
@@ -1,2 +1,3 @@
-springbootservicein28minlimitsservice.minimum=2
-springbootservicein28minlimitsservice.maximum=998
+springbootservicein28minlimitsservice.filename=springbootservicein28minlimitsservice.properties
+springbootservicein28minlimitsservice.minimum=5
+springbootservicein28minlimitsservice.maximum=995
