--- a/springbootservicein28minlimitsservice-dev.properties
+++ b/springbootservicein28minlimitsservice-dev.properties
@@ -1,3 +1,9 @@
 springbootservicein28minlimitsservice.filename=springbootservicein28minlimitsservice-dev.properties
 springbootservicein28minlimitsservice.minimum=6
 springbootservicein28minlimitsservice.maximum=994
+
+server.port=9011
+spring.application.name=springbootservicein28minlimitsservice
+spring.profiles.active=dev
+spring.cloud.config.profile=dev
+management.endpoints.web.exposure.include=*
