--- a/springbootservicein28minlimitsservice.properties
+++ b/springbootservicein28minlimitsservice.properties
@@ -1,3 +1,9 @@
 springbootservicein28minlimitsservice.filename=springbootservicein28minlimitsservice.properties
 springbootservicein28minlimitsservice.minimum=7
 springbootservicein28minlimitsservice.maximum=993
+
+server.port=9011
+spring.application.name=springbootservicein28minlimitsservice
+spring.profiles.active=dev
+spring.cloud.config.profile=dev
+management.endpoints.web.exposure.include=*
