--- a/springbootservicein28minlimitsservice-dev.properties
+++ b/springbootservicein28minlimitsservice-dev.properties
@@ -1,9 +1,8 @@
 springbootservicein28minlimitsservice.filename=springbootservicein28minlimitsservice-dev.properties
-springbootservicein28minlimitsservice.minimum=22
-springbootservicein28minlimitsservice.maximum=8
+springbootservicein28minlimitsservice.env=dev
+springbootservicein28minlimitsservice.minimum=2
+springbootservicein28minlimitsservice.maximum=2
 
 server.port=9011
 spring.application.name=springbootservicein28minlimitsservice
-spring.profiles.active=dev
-spring.cloud.config.profile=dev
 management.endpoints.web.exposure.include=*
