--- a/springbootservicein28minlimitsservice.properties
+++ b/springbootservicein28minlimitsservice.properties
@@ -1,6 +1,7 @@
 springbootservicein28minlimitsservice.filename=springbootservicein28minlimitsservice.properties
-springbootservicein28minlimitsservice.minimum=700
-springbootservicein28minlimitsservice.maximum=939
+springbootservicein28minlimitsservice.env=default
+springbootservicein28minlimitsservice.minimum=1
+springbootservicein28minlimitsservice.maximum=1
 
 server.port=9011
 spring.application.name=springbootservicein28minlimitsservice
