--- a/springbootservicein28mincurrencyexchangeservice.properties
+++ b/springbootservicein28mincurrencyexchangeservice.properties
@@ -3,3 +3,8 @@ springbootservicein28mincurrencyexchangeservice.filename=springbootservicein28mi
 server.port=9011
 spring.application.name=springbootservicein28mincurrencyexchangeservice
 management.endpoints.web.exposure.include=*
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
