--- a/springcloudserviceregistry-prod.properties
+++ b/springcloudserviceregistry-prod.properties
@@ -1,2 +1,8 @@
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+springcloudserviceregistry.filename=springcloudserviceregistry-prod.properties
+springcloudserviceregistry.env=prod
+
+server.port=8761
+spring.application.name=springcloudserviceregistry
