--- a/springbootservicein28mincurrencyconversionservice-prod.properties
+++ b/springbootservicein28mincurrencyconversionservice-prod.properties
@@ -8,3 +8,5 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+#springbootservicein28mincurrencyexchangeservice.ribbon.listOfServers=http://localhost:9021,http://localhost:9022
