--- a/springcloudserviceregistry-prod.properties
+++ b/springcloudserviceregistry-prod.properties
@@ -6,3 +6,5 @@ springcloudserviceregistry.env=prod
 
 server.port=8761
 spring.application.name=springcloudserviceregistry
+
+eureka.server.enableSelfPreservation=false
