--- a/springcloudserviceregistry-prod.properties
+++ b/springcloudserviceregistry-prod.properties
@@ -7,4 +7,4 @@ springcloudserviceregistry.env=prod
 server.port=8761
 spring.application.name=springcloudserviceregistry
 
-eureka.server.enableSelfPreservation=false
+#eureka.server.enableSelfPreservation=false
