--- a/springbootservicein28mincurrencyconversionservice-prod.properties
+++ b/springbootservicein28mincurrencyconversionservice-prod.properties
@@ -9,4 +9,4 @@ spring.h2.console.enabled=true
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
-#springbootservicein28mincurrencyexchangeservice.ribbon.listOfServers=http://localhost:9021,http://localhost:9022
+springbootservicein28mincurrencyexchangeservice.ribbon.listOfServers=http://localhost:9021,http://localhost:9022
