--- a/currency-exchange-service.yml
+++ b/currency-exchange-service.yml
@@ -8,3 +8,13 @@ management:
                 include: '*'
     security:
         enabled: false
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
+  h2:
+    console:
+      enabled: true
+  jpa:
+    show-sql: true
+
