--- a/currency-exchange-service.yml
+++ b/currency-exchange-service.yml
@@ -1,20 +1,19 @@
 management:
-    endpoint:
-        shutdown:
-            enabled: true
-    endpoints:
-        web:
-            exposure:
-                include: '*'
-    security:
-        enabled: false
+  endpoint:
+    shutdown:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  security:
+    enabled: false
 eureka:
   client:
     service-url:
-      default-zone: http://localhost:8761/eureka
+      default-zone: 'http://localhost:8761/eureka'
   h2:
     console:
       enabled: true
   jpa:
     show-sql: true
-
