--- a/currency-exchange-service.yml
+++ b/currency-exchange-service.yml
@@ -12,6 +12,7 @@ eureka:
   client:
     service-url:
       default-zone: 'http://localhost:8761/eureka'
+spring:  
   h2:
     console:
       enabled: true
