--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,8 @@
-spring:
-  application:
-    name: default-app-name
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://service-registry:8761/eureka/
+  instance:
+    hostname: service-registry
