--- a/application.yml
+++ b/application.yml
@@ -3,6 +3,6 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://192.168.1.3:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
-    hostname: 192.168.1.3
+    hostname: localhost
